--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
     "@ng-bootstrap/ng-bootstrap": "^15.1.2",
+    "cesium": "^1.111.0",
     "chart.js": "^4.4.0",
     "ng-bootstrap": "^0.46.0",
     "ngx-toastr": "^17.0.2",
